calculate percent change

--- a/BTBJ.ipynb
+++ b/BTBJ.ipynb
@@ -16,17 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TMFsim = pd.read_csv(\"./data/TMFSIM.csv\")\n",
-    "UPROsim = pd.read_csv(\"./data/UPROSIM.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -99,18 +89,107 @@
        "4  5/27/86   1.3%         NaN"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "TMFsim = pd.read_csv(\"./data/TMFSIM.csv\")\n",
+    "UPROsim = pd.read_csv(\"./data/UPROSIM.csv\")\n",
+    "\n",
     "TMFsim.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TMF</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1986-05-20</td>\n",
+       "      <td>-0.6%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1986-05-21</td>\n",
+       "      <td>3.0%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1986-05-22</td>\n",
+       "      <td>-0.6%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1986-05-23</td>\n",
+       "      <td>0.6%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1986-05-27</td>\n",
+       "      <td>1.3%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date    TMF  Unnamed: 2\n",
+       "0 1986-05-20  -0.6%         NaN\n",
+       "1 1986-05-21   3.0%         NaN\n",
+       "2 1986-05-22  -0.6%         NaN\n",
+       "3 1986-05-23   0.6%         NaN\n",
+       "4 1986-05-27   1.3%         NaN"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "TMFsim['Date'] = pd.to_datetime(TMFsim['Date'], format='%m/%d/%y')\n",
+    "UPROsim['Date'] = pd.to_datetime(UPROsim['Date'], format='%m/%d/%y')\n",
+    "\n",
+    "display(TMFsim.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +249,7 @@
        " 'trailingPegRatio': None}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -206,12 +285,12 @@
    ],
    "source": [
     "yf.pdr_override()\n",
-    "data = yf.download(\"SPY TLT\")"
+    "real_data = yf.download(\"SPY TLT\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +374,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1993-02-01</th>\n",
-       "      <td>25.017355</td>\n",
+       "      <td>25.017351</td>\n",
        "      <td>NaN</td>\n",
        "      <td>44.250000</td>\n",
        "      <td>NaN</td>\n",
@@ -310,7 +389,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1993-02-02</th>\n",
-       "      <td>25.070366</td>\n",
+       "      <td>25.070362</td>\n",
        "      <td>NaN</td>\n",
        "      <td>44.343750</td>\n",
        "      <td>NaN</td>\n",
@@ -325,7 +404,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1993-02-03</th>\n",
-       "      <td>25.335369</td>\n",
+       "      <td>25.335373</td>\n",
        "      <td>NaN</td>\n",
        "      <td>44.812500</td>\n",
        "      <td>NaN</td>\n",
@@ -340,7 +419,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1993-02-04</th>\n",
-       "      <td>25.441380</td>\n",
+       "      <td>25.441376</td>\n",
        "      <td>NaN</td>\n",
        "      <td>45.000000</td>\n",
        "      <td>NaN</td>\n",
@@ -371,7 +450,7 @@
        "    <tr>\n",
        "      <th>2024-02-26</th>\n",
        "      <td>505.989990</td>\n",
-       "      <td>93.589996</td>\n",
+       "      <td>93.296844</td>\n",
        "      <td>505.989990</td>\n",
        "      <td>93.589996</td>\n",
        "      <td>508.750000</td>\n",
@@ -386,7 +465,7 @@
        "    <tr>\n",
        "      <th>2024-02-27</th>\n",
        "      <td>506.929993</td>\n",
-       "      <td>92.930000</td>\n",
+       "      <td>92.638916</td>\n",
        "      <td>506.929993</td>\n",
        "      <td>92.930000</td>\n",
        "      <td>507.160004</td>\n",
@@ -401,7 +480,7 @@
        "    <tr>\n",
        "      <th>2024-02-28</th>\n",
        "      <td>506.260010</td>\n",
-       "      <td>93.519997</td>\n",
+       "      <td>93.227066</td>\n",
        "      <td>506.260010</td>\n",
        "      <td>93.519997</td>\n",
        "      <td>506.859985</td>\n",
@@ -416,7 +495,7 @@
        "    <tr>\n",
        "      <th>2024-02-29</th>\n",
        "      <td>508.079987</td>\n",
-       "      <td>94.180000</td>\n",
+       "      <td>93.885002</td>\n",
        "      <td>508.079987</td>\n",
        "      <td>94.180000</td>\n",
        "      <td>509.739990</td>\n",
@@ -453,15 +532,15 @@
        "Ticker             SPY        TLT         SPY        TLT         SPY   \n",
        "Date                                                                   \n",
        "1993-01-29   24.840679        NaN   43.937500        NaN   43.968750   \n",
-       "1993-02-01   25.017355        NaN   44.250000        NaN   44.250000   \n",
-       "1993-02-02   25.070366        NaN   44.343750        NaN   44.375000   \n",
-       "1993-02-03   25.335369        NaN   44.812500        NaN   44.843750   \n",
-       "1993-02-04   25.441380        NaN   45.000000        NaN   45.093750   \n",
+       "1993-02-01   25.017351        NaN   44.250000        NaN   44.250000   \n",
+       "1993-02-02   25.070362        NaN   44.343750        NaN   44.375000   \n",
+       "1993-02-03   25.335373        NaN   44.812500        NaN   44.843750   \n",
+       "1993-02-04   25.441376        NaN   45.000000        NaN   45.093750   \n",
        "...                ...        ...         ...        ...         ...   \n",
-       "2024-02-26  505.989990  93.589996  505.989990  93.589996  508.750000   \n",
-       "2024-02-27  506.929993  92.930000  506.929993  92.930000  507.160004   \n",
-       "2024-02-28  506.260010  93.519997  506.260010  93.519997  506.859985   \n",
-       "2024-02-29  508.079987  94.180000  508.079987  94.180000  509.739990   \n",
+       "2024-02-26  505.989990  93.296844  505.989990  93.589996  508.750000   \n",
+       "2024-02-27  506.929993  92.638916  506.929993  92.930000  507.160004   \n",
+       "2024-02-28  506.260010  93.227066  506.260010  93.519997  506.859985   \n",
+       "2024-02-29  508.079987  93.885002  508.079987  94.180000  509.739990   \n",
        "2024-03-01  512.849976  94.470001  512.849976  94.470001  513.289978   \n",
        "\n",
        "Price                         Low                   Open               Volume  \\\n",
@@ -497,18 +576,18 @@
        "[7828 rows x 12 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "real_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -529,13 +608,278 @@
        "           names=['Price', 'Ticker'])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.columns"
+    "real_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_pct_change_for_tickers(df, tickers):\n",
+    "    \"\"\"\n",
+    "    Calculate the daily percentage change of the 'Close' price for a given list of tickers.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - df: DataFrame with MultiIndex columns ('Price', 'Ticker').\n",
+    "    - tickers: List of string, the ticker symbols of the stocks.\n",
+    "\n",
+    "    Returns:\n",
+    "    - DataFrame with the date, and the daily percentage change of the 'Close' price for the specified tickers.\n",
+    "    \"\"\"\n",
+    "    pct_change_list = []\n",
+    "\n",
+    "    for ticker in tickers:\n",
+    "        if ('Close', ticker) in df.columns:\n",
+    "            # Calculate percentage change for the specified ticker's 'Close' price\n",
+    "            pct_change_series = df['Close', ticker].pct_change() * 100  # Multiply by 100 to convert to percentage\n",
+    "            pct_change_series.name = f'{ticker}_Pct_Change'  # Rename the Series for clarity\n",
+    "            pct_change_list.append(pct_change_series)\n",
+    "\n",
+    "    # Concatenate all the percentage change Series into a single DataFrame\n",
+    "    if pct_change_list:\n",
+    "        pct_change_df = pd.concat(pct_change_list, axis=1)\n",
+    "        pct_change_df.index.name = 'Date'  # Assuming the DataFrame's index is Date\n",
+    "        # Reset index to turn the Date index into a column\n",
+    "        pct_change_df.reset_index(inplace=True)\n",
+    "        return pct_change_df\n",
+    "    else:\n",
+    "        return pd.DataFrame()  # Return an empty DataFrame if no tickers were found or provided"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Date  SPY_Pct_Change  TLT_Pct_Change\n",
+      "0    1993-01-29             NaN             NaN\n",
+      "1    1993-02-01        0.711238             NaN\n",
+      "2    1993-02-02        0.211864             NaN\n",
+      "3    1993-02-03        1.057082             NaN\n",
+      "4    1993-02-04        0.418410             NaN\n",
+      "...         ...             ...             ...\n",
+      "7823 2024-02-26       -0.366253       -0.298292\n",
+      "7824 2024-02-27        0.185775       -0.705199\n",
+      "7825 2024-02-28       -0.132165        0.634883\n",
+      "7826 2024-02-29        0.359494        0.705735\n",
+      "7827 2024-03-01        0.938826        0.307922\n",
+      "\n",
+      "[7828 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tickers = ['SPY', 'TLT']\n",
+    "pct_change_df = calculate_pct_change_for_tickers(real_data, tickers)\n",
+    "print(pct_change_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>SPY_Pct_Change</th>\n",
+       "      <th>TLT_Pct_Change</th>\n",
+       "      <th>TMF</th>\n",
+       "      <th>Unnamed: 2_real</th>\n",
+       "      <th>UPRO</th>\n",
+       "      <th>Unnamed: 2_sim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1986-05-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.6%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.7%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1986-05-21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.7%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1986-05-22</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.6%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.9%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1986-05-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.6%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.4%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1986-05-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.3%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.2%</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9517</th>\n",
+       "      <td>2024-02-26</td>\n",
+       "      <td>-0.366253</td>\n",
+       "      <td>-0.298292</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9518</th>\n",
+       "      <td>2024-02-27</td>\n",
+       "      <td>0.185775</td>\n",
+       "      <td>-0.705199</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9519</th>\n",
+       "      <td>2024-02-28</td>\n",
+       "      <td>-0.132165</td>\n",
+       "      <td>0.634883</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9520</th>\n",
+       "      <td>2024-02-29</td>\n",
+       "      <td>0.359494</td>\n",
+       "      <td>0.705735</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9521</th>\n",
+       "      <td>2024-03-01</td>\n",
+       "      <td>0.938826</td>\n",
+       "      <td>0.307922</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9522 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date  SPY_Pct_Change  TLT_Pct_Change    TMF  Unnamed: 2_real  \\\n",
+       "0    1986-05-20             NaN             NaN  -0.6%              NaN   \n",
+       "1    1986-05-21             NaN             NaN   3.0%              NaN   \n",
+       "2    1986-05-22             NaN             NaN  -0.6%              NaN   \n",
+       "3    1986-05-23             NaN             NaN   0.6%              NaN   \n",
+       "4    1986-05-27             NaN             NaN   1.3%              NaN   \n",
+       "...         ...             ...             ...    ...              ...   \n",
+       "9517 2024-02-26       -0.366253       -0.298292    NaN              NaN   \n",
+       "9518 2024-02-27        0.185775       -0.705199    NaN              NaN   \n",
+       "9519 2024-02-28       -0.132165        0.634883    NaN              NaN   \n",
+       "9520 2024-02-29        0.359494        0.705735    NaN              NaN   \n",
+       "9521 2024-03-01        0.938826        0.307922    NaN              NaN   \n",
+       "\n",
+       "       UPRO  Unnamed: 2_sim  \n",
+       "0      3.7%             NaN  \n",
+       "1     -0.7%             NaN  \n",
+       "2      5.9%             NaN  \n",
+       "3      1.4%             NaN  \n",
+       "4      4.2%             NaN  \n",
+       "...     ...             ...  \n",
+       "9517    NaN             NaN  \n",
+       "9518    NaN             NaN  \n",
+       "9519    NaN             NaN  \n",
+       "9520    NaN             NaN  \n",
+       "9521    NaN             NaN  \n",
+       "\n",
+       "[9522 rows x 7 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pct_change_df['Date'] = pd.to_datetime(pct_change_df['Date'])\n",
+    "\n",
+    "joined_df = pd.merge(pct_change_df, TMFsim, on='Date', how='outer')\n",
+    "\n",
+    "final_joined_df = pd.merge(joined_df, UPROsim, on='Date', how='outer', suffixes=('_real', '_sim'))\n",
+    "\n",
+    "final_joined_df.sort_values(by='Date', inplace=True)\n",
+    "display(final_joined_df)"
    ]
   },
   {
