meesage for Bren

--- a/BTBJ.ipynb
+++ b/BTBJ.ipynb
@@ -2308,10 +2308,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "So this is very interesting. According to aggregating over all the years UPRO has been a fund, it seems to outpreform 3x SPY. One would expect this to not be the case do to borrowing costs, the expense ratio, and beta decay. These factors are apparent when looking at the volatility. 3x SPY is more volatile then UPRO meaning that UPRO is not fully able to track 3x SPY to its maximum amount. However, it tracks less which becomes its strength for outperformance (maybe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
