UPRO vs 3x SPY CAGR calc

--- a/BTBJ.ipynb
+++ b/BTBJ.ipynb
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
        "[7834 rows x 7 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2315,8 +2315,216 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>3xSPY</th>\n",
+       "      <th>3xTLT</th>\n",
+       "      <th>UPRO</th>\n",
+       "      <th>TMF</th>\n",
+       "      <th>UPRO_3xSPY diff</th>\n",
+       "      <th>UPRO_3xSPY absolute diff</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2009-06-26</th>\n",
+       "      <td>-0.781947</td>\n",
+       "      <td>0.508300</td>\n",
+       "      <td>-0.518435</td>\n",
+       "      <td>0.578598</td>\n",
+       "      <td>0.263512</td>\n",
+       "      <td>-0.263512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-29</th>\n",
+       "      <td>2.809236</td>\n",
+       "      <td>0.444044</td>\n",
+       "      <td>2.837223</td>\n",
+       "      <td>0.119847</td>\n",
+       "      <td>0.027987</td>\n",
+       "      <td>0.027987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-30</th>\n",
+       "      <td>-2.427185</td>\n",
+       "      <td>-0.506715</td>\n",
+       "      <td>-2.387350</td>\n",
+       "      <td>-0.598516</td>\n",
+       "      <td>0.039834</td>\n",
+       "      <td>-0.039834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-07-01</th>\n",
+       "      <td>1.239820</td>\n",
+       "      <td>-1.554397</td>\n",
+       "      <td>1.072943</td>\n",
+       "      <td>-1.083815</td>\n",
+       "      <td>-0.166877</td>\n",
+       "      <td>-0.166877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-07-02</th>\n",
+       "      <td>-8.188035</td>\n",
+       "      <td>0.701534</td>\n",
+       "      <td>-8.252508</td>\n",
+       "      <td>1.095690</td>\n",
+       "      <td>-0.064473</td>\n",
+       "      <td>0.064473</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-05</th>\n",
+       "      <td>-2.998240</td>\n",
+       "      <td>4.272518</td>\n",
+       "      <td>-3.037144</td>\n",
+       "      <td>4.228441</td>\n",
+       "      <td>-0.038903</td>\n",
+       "      <td>0.038903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-06</th>\n",
+       "      <td>1.520175</td>\n",
+       "      <td>1.760445</td>\n",
+       "      <td>1.550628</td>\n",
+       "      <td>1.650865</td>\n",
+       "      <td>0.030453</td>\n",
+       "      <td>0.030453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-07</th>\n",
+       "      <td>2.977929</td>\n",
+       "      <td>-0.281268</td>\n",
+       "      <td>2.901209</td>\n",
+       "      <td>-0.431928</td>\n",
+       "      <td>-0.076720</td>\n",
+       "      <td>-0.076720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-08</th>\n",
+       "      <td>-1.800662</td>\n",
+       "      <td>-0.531798</td>\n",
+       "      <td>-1.854875</td>\n",
+       "      <td>-0.416453</td>\n",
+       "      <td>-0.054212</td>\n",
+       "      <td>0.054212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-03-11</th>\n",
+       "      <td>-0.257955</td>\n",
+       "      <td>-0.156700</td>\n",
+       "      <td>-0.332630</td>\n",
+       "      <td>-0.261366</td>\n",
+       "      <td>-0.074675</td>\n",
+       "      <td>0.074675</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3701 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               3xSPY     3xTLT      UPRO       TMF  UPRO_3xSPY diff  \\\n",
+       "Date                                                                  \n",
+       "2009-06-26 -0.781947  0.508300 -0.518435  0.578598         0.263512   \n",
+       "2009-06-29  2.809236  0.444044  2.837223  0.119847         0.027987   \n",
+       "2009-06-30 -2.427185 -0.506715 -2.387350 -0.598516         0.039834   \n",
+       "2009-07-01  1.239820 -1.554397  1.072943 -1.083815        -0.166877   \n",
+       "2009-07-02 -8.188035  0.701534 -8.252508  1.095690        -0.064473   \n",
+       "...              ...       ...       ...       ...              ...   \n",
+       "2024-03-05 -2.998240  4.272518 -3.037144  4.228441        -0.038903   \n",
+       "2024-03-06  1.520175  1.760445  1.550628  1.650865         0.030453   \n",
+       "2024-03-07  2.977929 -0.281268  2.901209 -0.431928        -0.076720   \n",
+       "2024-03-08 -1.800662 -0.531798 -1.854875 -0.416453        -0.054212   \n",
+       "2024-03-11 -0.257955 -0.156700 -0.332630 -0.261366        -0.074675   \n",
+       "\n",
+       "            UPRO_3xSPY absolute diff  \n",
+       "Date                                  \n",
+       "2009-06-26                 -0.263512  \n",
+       "2009-06-29                  0.027987  \n",
+       "2009-06-30                 -0.039834  \n",
+       "2009-07-01                 -0.166877  \n",
+       "2009-07-02                  0.064473  \n",
+       "...                              ...  \n",
+       "2024-03-05                  0.038903  \n",
+       "2024-03-06                  0.030453  \n",
+       "2024-03-07                 -0.076720  \n",
+       "2024-03-08                  0.054212  \n",
+       "2024-03-11                  0.074675  \n",
+       "\n",
+       "[3701 rows x 6 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average annual change of UPRO: 37.5703%\n",
+      "Average annual change of 3X SPY: 36.2862%\n"
+     ]
+    }
+   ],
+   "source": [
+    "oldest_upro_date = complete_df['UPRO'].dropna().index.min()\n",
+    "filtered_df = complete_df[complete_df.index >= oldest_upro_date]\n",
+    "display(filtered_df)\n",
+    "yearly_sum_upro = filtered_df['UPRO'].dropna().resample('YE').sum()\n",
+    "yearly_sum_3xspy = filtered_df['3xSPY'].dropna().resample('YE').sum()\n",
+    "\n",
+    "average_annual_change_upro = yearly_sum_upro.sum() / len(yearly_sum_upro)\n",
+    "average_annual_change_3xspy = yearly_sum_3xspy.sum() / len(yearly_sum_3xspy)\n",
+    "\n",
+    "print(f\"Average annual change of UPRO: {average_annual_change_upro:.4f}%\")\n",
+    "print(f\"Average annual change of 3X SPY: {average_annual_change_3xspy:.4f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
